--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,22 +7,22 @@
 
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="com.example.weatherapplication.FavoriteFragment"
+        android:name="com.example.weatherapplication.favorite.view.FavoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
     <fragment
         android:id="@+id/alertFragment"
-        android:name="com.example.weatherapplication.AlertFragment"
+        android:name="com.example.weatherapplication.alert.view.AlertFragment"
         android:label="fragment_alert"
         tools:layout="@layout/fragment_alert" />
     <fragment
         android:id="@+id/settingFragment"
-        android:name="com.example.weatherapplication.SettingFragment"
+        android:name="com.example.weatherapplication.setting.view.SettingFragment"
         android:label="fragment_setting"
         tools:layout="@layout/fragment_setting" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.weatherapplication.HomeFragment"
+        android:name="com.example.weatherapplication.home.view.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
