--- a/app/src/main/res/layout/all_week_temp.xml
+++ b/app/src/main/res/layout/all_week_temp.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     app:cardElevation="8dp"
-    android:backgroundTint="@color/black"
+    android:backgroundTint="@color/custom_grey"
     android:layout_margin="8dp"
     android:padding="8dp">
 
