--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background"
-    tools:context=".HomeFragment"
+    android:background="@color/black"
+    tools:context=".home.view.HomeFragment"
     tools:ignore="SpeakableTextPresentCheck"
     >
 
@@ -35,9 +35,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="12dp"
+                    android:layout_marginTop="20dp"
                     android:fontFamily="@font/merriweathersans_bold"
                     android:gravity="center"
-                    android:text=""
+                    android:text="baris"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +49,7 @@
                     android:id="@+id/homeDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="20dp"
                     android:fontFamily="@font/merriweathersans_regular"
                     android:gravity="center"
                     android:text=""
@@ -74,7 +75,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/home_gradient" />
+                        android:background="#1c1c1c" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
