--- a/app/src/main/res/layout/today_temp.xml
+++ b/app/src/main/res/layout/today_temp.xml
@@ -5,39 +5,39 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
-    app:cardElevation="8dp"
-    android:backgroundTint="@color/black"
-    android:layout_margin="8dp"
-    android:padding="8dp">
+    android:layout_margin="3dp"
+    android:backgroundTint="@color/custom_grey">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/tempHour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="12dp"
             android:paddingLeft="12dp"
+            android:paddingTop="12dp"
             android:paddingRight="12dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            >
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <TextView
                 android:id="@+id/hourTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_margin="10dp"
-                android:text="02:00 PM"
-                android:textSize="12sp"
-                android:textColor="@color/white"
                 android:fontFamily="@font/merriweathersans_regular"
+                android:gravity="center"
+                android:text="02:00 PM"
+                android:textColor="@color/white"
+                android:textSize="12sp"
 
                 />
 
@@ -47,20 +47,19 @@
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:src="@drawable/clear_sky"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/hourTempDegreeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_margin="10dp"
-                android:text="23&#xb0; C"
-                android:textSize="18sp"
-                android:textColor="@color/white"
                 android:fontFamily="@font/merriweathersans_bold"
-                />
+                android:gravity="center"
+                android:text="23&#xb0; C"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
