add ui for screens

--- a/app/src/main/res/layout/today_temp.xml
+++ b/app/src/main/res/layout/today_temp.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
-    android:layout_margin="3dp"
+    android:layout_margin="5dp"
+    app:guidelineUseRtl="true"
     android:backgroundTint="@color/custom_grey">
 
 
