--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,7 +8,7 @@
     app:cardBackgroundColor="@android:color/transparent"
     app:cardElevation="0dp"
 
-    tools:context=".SplashScreen">
+    tools:context=".splash.SplashScreen">
 
   <com.airbnb.lottie.LottieAnimationView
       android:id="@+id/animationView"
