--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -9,14 +9,14 @@
     tools:context=".favorite.view.FavoriteFragment" >
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_alert"
+        android:id="@+id/addFavBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/custom_grey"
         android:layout_marginBottom="32dp"
         android:clickable="true"
-        android:src="@drawable/baseline_add_24"
+        android:src="@drawable/baseline_add_location_alt_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
