--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:hint="Search Location"
+        android:drawableStart="@drawable/baseline_search_24"
         android:inputType="textPersonName"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
