--- a/app/src/main/res/layout/alert_item.xml
+++ b/app/src/main/res/layout/alert_item.xml
@@ -38,9 +38,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/merriweathersans_bold"
             android:text="@string/time_alert"
             android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/to"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/city_name"
             app:layout_constraintTop_toBottomOf="@+id/city_name" />
 
@@ -61,14 +64,14 @@
             android:id="@+id/txt_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="132dp"
+            android:layout_marginEnd="116dp"
             android:fontFamily="@font/merriweathersans_bold"
             android:text="@string/time_alert"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/to"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/to"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/at"
