--- a/app/src/main/res/layout/fragment_add_new_alert.xml
+++ b/app/src/main/res/layout/fragment_add_new_alert.xml
@@ -44,8 +44,8 @@
             android:fontFamily="@font/merriweathersans_bold"
             android:hint="@string/selected_location"
             android:padding="8dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -106,8 +106,8 @@
                     android:fontFamily="@font/merriweathersans_bold"
                     android:hint="@string/exampleDate"
                     android:padding="8dp"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
                     android:textSize="12sp" />
             </LinearLayout>
 
@@ -138,8 +138,8 @@
                     android:fontFamily="@font/merriweathersans_bold"
                     android:hint="@string/exampleDate"
                     android:padding="8dp"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
                     android:textSize="12sp" />
             </LinearLayout>
 
@@ -177,8 +177,8 @@
                 android:fontFamily="@font/merriweathersans_bold"
                 android:hint="@string/exampleTime"
                 android:padding="8dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -187,13 +187,16 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_margin="16dp"
-            android:layout_marginEnd="40dp"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
+            android:fontFamily="@font/merriweathersans_bold"
+            android:layout_marginEnd="28dp"
             android:text="@string/submit"
             app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
-            app:layout_constraintVertical_bias="0.044" />
+            app:layout_constraintTop_toBottomOf="@+id/alarmSoundGroup"
+            app:layout_constraintVertical_bias="0.068" />
 
         <Button
             android:id="@+id/alertCancelBtn"
@@ -201,10 +204,61 @@
             android:layout_height="50dp"
             android:layout_margin="16dp"
             android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/black"
             android:text="@string/cancel"
+            android:fontFamily="@font/merriweathersans_bold"
+            android:textColor="@color/white"
             app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/alertSubmitBtn"
             app:layout_constraintEnd_toStartOf="@+id/alertSubmitBtn"
             app:layout_constraintTop_toTopOf="@+id/alertSubmitBtn" />
+
+        <TextView
+            android:id="@+id/alarmSoundTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/merriweathersans_bold"
+            android:padding="4dp"
+            android:text="@string/alarm_sound"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout5"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
+
+        <RadioGroup
+            android:id="@+id/alarmSoundGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/alarmSoundTxt"
+            app:layout_constraintTop_toBottomOf="@+id/alarmSoundTxt">
+
+            <RadioButton
+                android:id="@+id/notificationRB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/merriweathersans_bold"
+                android:padding="8dp"
+                android:text="@string/notification_txt"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
+
+            <RadioButton
+                android:id="@+id/soundRB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/merriweathersans_bold"
+                android:padding="8dp"
+                android:text="@string/alarm_txt"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
+        </RadioGroup>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
