--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -5,25 +5,25 @@
 
     <item
         android:id="@+id/homeFragment"
-        android:title="Home"
+        android:title="@string/home"
         android:icon="@drawable/baseline_home_24"
         />
 
     <item
         android:id="@+id/favoriteFragment"
-        android:title="Favorite"
+        android:title="@string/favorite"
         android:icon="@drawable/baseline_favorite_24"
         />
 
     <item
         android:id="@+id/alertFragment"
-        android:title="Alert"
+        android:title="@string/alert"
         android:icon="@drawable/baseline_add_alert_24"
         />
 
     <item
         android:id="@+id/settingFragment"
-        android:title="Setting"
+        android:title="@string/setting"
         android:icon="@drawable/baseline_settings_24"
         />
 
